# FdF

./: CMakeLists.txt  Makefile  a.out  bfs_algo.c  calculate_coords.c  calculation_projection.c  draw's_util.c  draw.c  fdf  free_data.c  go.sh  key_hook.c  lem_in.h  main.c  put_in_list.c  run.sh  util.c  util2.c  validation_1.c  validation_2.c
inc/: fdf.h
lib/libft/: libft.h
libft/: ft_atoi_base.c  ft_strchr.c  printf.h.gch
libftprintf/: CMakeLists.txt  Makefile
src/: calculate_coords.c  coordinats.c  draw.c  draw_util.c  free_mass.c  image.c  key_hook.c  main.c  mainandvalid.c  projection.c  set_dot.c  util.c  util2.c  util3.c  wu_algo.c
test_maps/: 10-2.fdf
