cmake_minimum_required(VERSION 3.9)
project(lem_in)

set(CMAKE_CXX_STANDARD 11)

add_executable(lem_in
        libftprintf/inc/printf.h
        libftprintf/src/field_width.c
        libftprintf/src/flags.c
        libftprintf/src/ft_atoi.c
        libftprintf/src/ft_atoi_base.c
        libftprintf/src/ft_bzero.c
        libftprintf/src/ft_check.c
        libftprintf/src/ft_check_pers.c
        libftprintf/src/ft_itoa.c
        libftprintf/src/ft_itoa_base.c
        libftprintf/src/ft_itoa_base_l.c
        libftprintf/src/ft_lcs_unicode.c
        libftprintf/src/ft_lstadd.c
        libftprintf/src/ft_lstdel.c
        libftprintf/src/ft_lstdelone.c
        libftprintf/src/ft_lstnew.c
        libftprintf/src/ft_memalloc.c
        libftprintf/src/ft_memccpy.c
        libftprintf/src/ft_memchr.c
        libftprintf/src/ft_memcmp.c
        libftprintf/src/ft_memcpy.c
        libftprintf/src/ft_memdel.c
        libftprintf/src/ft_memmove.c
        libftprintf/src/ft_memset.c
        libftprintf/src/ft_output.c
        libftprintf/src/ft_printf.c
        libftprintf/src/ft_putchar.c
        libftprintf/src/ft_putchar_fd.c
        libftprintf/src/ft_putendl.c
        libftprintf/src/ft_putendl_fd.c
        libftprintf/src/ft_putnbr.c
        libftprintf/src/ft_putnbr_fd.c
        libftprintf/src/ft_putstr.c
        libftprintf/src/ft_putstr_fd.c
        libftprintf/src/ft_strchr.c
        libftprintf/src/ft_strcpy.c
        libftprintf/src/ft_strdel.c
        libftprintf/src/ft_strdup.c
        libftprintf/src/ft_strequ.c
        libftprintf/src/ft_strjoin.c
        libftprintf/src/ft_strlen.c
        libftprintf/src/ft_strncmp.c
        libftprintf/src/ft_strnew.c
        libftprintf/src/ft_strrchr.c
        libftprintf/src/ft_strstr.c
        libftprintf/src/ft_strsub.c
        libftprintf/src/ft_toupper.c
        libftprintf/src/function_pointers.c
        libftprintf/src/get_next_line.c
        libftprintf/src/modifiers.c
        libftprintf/src/nbr_hex.c
        libftprintf/src/precision.c
        libftprintf/src/specifiers.c
        libftprintf/src/specifiers2.c
        lem_in.h
        main.c
        validation_1.c
        put_in_list.c
        validation_2.c
        free_data.c)
